feat: add new link

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 	<h1>Привет, Git!</h1>
 
 	<a href="https://google.com">Link to google</a>
+	<a href="https://yandex.ru">Link to yandex</a>
 </body>
 </html>
