feat: add image

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	<h1>Привет, Git!</h1>
 
 	<a href="https://google.com">Link to google</a>
-	<a href="https://yandex.ru">Link to yandex</a>
+	<!-- <a href="https://yandex.ru">Link to yandex</a> -->
+	<a href="https://mail.ru">Link to mail.ru</a>
+
+	<img src="" alt="some image" />
 </body>
 </html>
